--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
 <div>
   
   Add First: <input #addFirst />
-  <button type="button" (click)="addFirst(addFirst.value)">CREATE</button>
+  <button type="button" (click)="addFirstFunc(addFirst.value)">CREATE</button>
   Offer First: <input #offerFirst />
-  <button type="button" (click)="offerFirst(offerFirst.value)">CREATE</button>
+  <button type="button" (click)="offerFirstFunc(offerFirst.value)">CREATE</button>
   Add Last: <input #addLast />
-  <button type="button" (click)="addLast(addLast.value)">CREATE</button>
+  <button type="button" (click)="addLastFunc(addLast.value)">CREATE</button>
   Offer Last: <input #offerLast />
-  <button type="button" (click)="offerLast(offerLast.value)">CREATE</button>
+  <button type="button" (click)="offerLastFunc(offerLast.value)">CREATE</button>
 </div>
 <!-- <router-outlet></router-outlet> -->
