Deque Basic Visualisation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,4 +29,10 @@
     {{errormsg}}
   </div>
 </div>
-<!-- <router-outlet></router-outlet> -->
+<div class="myDequeWrapper">
+  <div class="myDeque" *ngFor="let el of deque.deque">
+    text
+  </div>
+  
+
+</div>
