--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,8 @@
     width: 100%;
     height: stretch;
     align-items: center;
+    display: flex;
+    flex-direction: row;
 
 }
 .myDeque{
@@ -14,6 +16,6 @@
     border-color: aquamarine;
     border-style: solid;
     border-width: 2px;
-    
+    padding: 5px;
 
 }
