--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,7 @@
     <button type="button" (click)="getLastFunc()">Get Last</button>
     <button type="button" (click)="peekFirstFunc()">Peek First</button>
     <button type="button" (click)="peekLastFunc()">Peek Last</button>
+    <button type="button" (click)="randomFunc()">Randomize</button>
   </div>
   <br/>
   <div class="row justify-content-center">
